
Today's work, trying to get 6.2.4 building with the new Avalon stuff.
----------------------------------------------------------------------
Tue Apr  3 19:15:09 2001                        Michael Jennings (mej)

Meant to check these in last night.  Oops again.
----------------------------------------------------------------------
Wed Apr  4 02:36:05 2001                        Michael Jennings (mej)

Oh look, it's a new automated update tool.  Well, most of one anyway.
----------------------------------------------------------------------
Wed Apr  4 18:34:38 2001                        Michael Jennings (mej)

Fixed a bug Shaleh found in imgtool.  Also finished initial work on
uptool.  Time to test....
----------------------------------------------------------------------
Wed Apr  4 21:07:15 2001                        Michael Jennings (mej)

The last of today's fixes.
----------------------------------------------------------------------
Fri Apr  6 19:22:32 2001                        Michael Jennings (mej)

Bugfixes.
----------------------------------------------------------------------
Fri Apr  6 19:24:18 2001                        Michael Jennings (mej)

Another fix
----------------------------------------------------------------------
Mon Apr  9 22:28:46 2001                        Michael Jennings (mej)

Got imgtool changes in.  Still trying to beat pkgsort into submission,
but it's making progress.
----------------------------------------------------------------------
Tue Apr 10 19:10:22 2001                        Michael Jennings (mej)

Updates and fixes.
----------------------------------------------------------------------
Thu Apr 12 00:52:13 2001                        Michael Jennings (mej)

New functions.
----------------------------------------------------------------------
Mon Apr 16 20:20:32 2001                        Michael Jennings (mej)

Now ready for beta testing....
----------------------------------------------------------------------