@@ -23,7 +23,7 @@
 # IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 # CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 #
-# $Id: srctool,v 1.14 2001/04/17 03:20:47 mej Exp $
+# $Id: srctool,v 1.15 2001/04/17 04:29:12 mej Exp $
 #
 
 # Include the Perl Modules we need
@@ -148,6 +148,9 @@ import_package
 	    }
 	}
 	chdir($pkgfile) if ($pkgfile);
+        if (($err = &generate_symlink_file("")) != AVALON_SUCCESS) {
+            return $err;
+        }
         ($tag = $name) =~ tr/a-z/A-Z/;
         $tag =~ s/\./_/g;
         ($err, $msg) = &run_av_cmd("revtool", "-xit $tag", "  ");
@@ -395,7 +398,7 @@ main
     select STDOUT; $| = 1;
     if ($opt_v) {
         # Do not edit this variable.  It is updated automatically by CVS when you commit
-        my $rcs_info = 'CVS Revision $Revision: 1.14 $ created on $Date: 2001/04/17 03:20:47 $ by $Author: mej $ ';
+        my $rcs_info = 'CVS Revision $Revision: 1.15 $ created on $Date: 2001/04/17 04:29:12 $ by $Author: mej $ ';
 
         $rcs_info =~ s/\$\s*Revision: (\S+) \$/$1/;
         $rcs_info =~ s/\$\s*Date: (\S+) (\S+) \$/$1 at $2/;
