@@ -1155,3 +1155,7 @@ Mon Apr 16 20:20:32 2001                        Michael Jennings (mej)
 
 Now ready for beta testing....
 ----------------------------------------------------------------------
+Mon Apr 16 21:28:58 2001                        Michael Jennings (mej)
+
+Create symlinks file automatically when using avimport.
+----------------------------------------------------------------------
